// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/PlayButton Inverted 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 30px;
  width: 30px;
  -webkit-flex: 0 0 30px;
  -ms-flex: 0 0 30px;
  flex: 0 0 30px;
  color: #6D6E70;
}

.c3 > svg {
  height: 100%;
  width: 100%;
  color: primary;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 3px solid #FFF;
  border-radius: 50px;
  background-color: #FFF;
  box-shadow: unset;
  cursor: pointer;
  overflow: hidden;
  padding: 10px;
  width: 80px;
  height: 80px;
}

.c2 {
  height: 100%;
  width: 100%;
  border: 3px solid #6D6E70;
  opacity: 0.4;
  border-radius: 50px;
  z-index: 1;
  position: absolute;
}

.c4 {
  margin-left: 7px;
}

.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
      data-projection-id={1}
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <div
        className="c2"
      />
      <span
        className="c3 c4"
        color="primary"
        size="30px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12.267 48.996 25.929-23.597L12.266.379v48.617Z"
            fill="currentColor"
            fillRule="evenodd"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Buttons/PlayButton Primary 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 30px;
  width: 30px;
  -webkit-flex: 0 0 30px;
  -ms-flex: 0 0 30px;
  flex: 0 0 30px;
  color: #FFF;
}

.c2 > svg {
  height: 100%;
  width: 100%;
  color: white;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 3px solid #FFF;
  border-radius: 50px;
  background-color: #6D6E70;
  box-shadow: unset;
  cursor: pointer;
  overflow: hidden;
  padding: 10px;
  width: 80px;
  height: 80px;
}

.c1 {
  height: 100%;
  width: 100%;
  border: 3px solid #FFF;
  opacity: 0.4;
  border-radius: 50px;
  z-index: 1;
  position: absolute;
}

.c3 {
  margin-left: 7px;
}

<div
  className="c0"
  data-projection-id={2}
  data-testid="primary-button"
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <div
    className="c1"
  />
  <span
    className="c2 c3"
    color="white"
    size="30px"
  >
    <svg
      viewBox="0 0 50 50"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12.267 48.996 25.929-23.597L12.266.379v48.617Z"
        fill="currentColor"
        fillRule="evenodd"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
      />
    </svg>
  </span>
</div>
`;
